@@ -42,6 +42,12 @@ sub send_mem_event {
         memory => \%mem,
         about  => {package => __PACKAGE__, details => $mem{details}},
         info   => [{tag => 'MEMORY', details => $mem{details}}],
+
+        harness_job_fields => [
+            {name => 'mem_rss',  details => $mem{rss}->[0] . $mem{rss}->[1]},
+            {name => 'mem_size', details => $mem{size}->[0] . $mem{size}->[1]},
+            {name => 'mem_peak', details => $mem{peak}->[0] . $mem{peak}->[1]},
+        ],
     );
 }
 
