@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Add harness_job_fields
+
 0.002001  2019-08-16 15:28:36-07:00 America/Los_Angeles
 
     - Initial Import
